--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,6 +6,10 @@
 <title>結果画面</title>
 </head>
 <body>
+<div th:text="*{id}">1</div><br/>
+<div th:text="*{name}"></div><br/>
+<h2>更新成功</h2>
+
 
 <form method="get" action="/home">
 
