list.html の順序の整理

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -11,18 +11,23 @@
 
 <button onclick="location.href='list'">管理画面へ</button>
 
-<table border="1" width = "500" height = "300" >
+<table>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
+          <th>id</th>
+          <th>社員コード</th>
+          <th>名前</th>
+          <th>苗字</th>
+          <th>last_name_romaji</th>
+          <th>first_name_romaji</th>
+          <th>所属</th>
+          <th>社員コード</th>
+          <th>社員コード</th>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      	<th></th>
+       	<th></th>
+        <th></th>
+        <th></th>
     </tr>
     <tr>
       <td></td>
