新規登録画面における”戻る”ボタンのエラー解除

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -9,7 +9,7 @@
 
 <h1>エンジニア</h1>
 
-<button onclick="location.href='list'">管理画面へ</button>
+<input type="button" onclick="location.href='list'" value="管理画面へ">
 
 <table>
     <tr>
@@ -20,8 +20,8 @@
           <th>last_name_romaji</th>
           <th>first_name_romaji</th>
           <th>所属</th>
-          <th>社員コード</th>
-          <th>社員コード</th>
+          <th>経歴</th>
+          <th>入社年月日</th>
     </tr>
     <tr>
       	<th></th>
