--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -20,8 +20,9 @@
 <h3>社員コード</h3><input type="text" name="joined_year"><br/>
 <input type="submit" value="登録">
 
-<button onclick="location.href='home'">戻る</button>
+
 </form>
+<input type="button" onclick="location.href='list'" value="戻る">
 
 
 
