--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,9 +7,9 @@
 <body>
 <h1>新規情報管理</h1>
 
-<button onclick="location.href='new'">新規登録</button>
+<input type="button" onclick="location.href='new'" value="新規登録">
 
-<button onclick="location.href='home'">戻る</button>
+<input type="button" onclick="location.href='home'" value="戻る">
 <table> 
     <thead>
         <tr>
@@ -20,8 +20,8 @@
           <th>last_name_romaji</th>
           <th>first_name_romaji</th>
           <th>所属</th>
-          <th>社員コード</th>
-          <th>社員コード</th>
+          <th>経歴</th>
+          <th>入社年月日</th>
          
           <th></th>
         </tr>
