--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -9,15 +9,15 @@
 
 <h1>社員情報</h1>
 <form  method="post" action = "/new/registration">
-<h3>社員コード</h3><input type="text" name="id"><br/>
+<h3>id</h3><input type="text" name="id"><br/>
 <h3>社員コード</h3><input type="text" name="staff_code"><br/>
 <h3>名前</h3><input type="text" name="last_name"><br/>
 <h3>苗字</h3><input type="text" name="first_name"><br/>
 <h3>last_name_romaji</h3><input type="text" name="last_name_romaji"><br/>
 <h3>first_name_romaji</h3><input type="text" name="first_name_romaji"><br/>
 <h3>所属</h3><input type="text" name="staff_department"><br/>
-<h3>社員コード</h3><input type="text" name="project_type"><br/>
-<h3>社員コード</h3><input type="text" name="joined_year"><br/>
+<h3>経歴</h3><input type="text" name="project_type"><br/>
+<h3>入社年月日</h3><input type="text" name="joined_year"><br/>
 <input type="submit" value="登録">
 
 
