4つに分けていたController(home,list,new,result)を１つのController(StaffController)にまとめた。 コードはそのままコピーして移動しただけなので、特に新しいコードを付け加えたことはない。 一度、There was an unexpected error (type=Internal Server Error, status=500). というエラーが発生したが、StaffControllerの35行目にあった、sv.new_employee(user);というコードを削除したら、 問題なく実行できた。

--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -18,7 +18,7 @@
 <h3>所属</h3><input type="text" name="staff_department"><br/>
 <h3>経歴</h3><input type="text" name="project_type"><br/>
 <h3>入社年月日</h3><input type="text" name="joined_year"><br/>
-<input type="submit" value="登録">
+<input type="submit" onclick="location.href='registration'"  value="登録">
 
 
 </form>
