--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -1,42 +1,121 @@
 <!DOCTYPE html>
-<html>
+<html　xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Blue star</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="stylesheet.css">
+	<title>Blue star</title>
 </head>
+
 <body>
-<h1>社員情報</h1>
+	<div id="topPage">
+		<div class="toptitle">社員情報</div>
+			
+		<div class="engineer">
+			<form action="/list">
+			<input type="submit" value="管理画面へ" class="btn staffbtn">
+			</form>
+			<div class="subtitle">エンジニア</div>
+		</div>
 
-<h1>エンジニア</h1>
-
-<input type="button" onclick="location.href='list'" value="管理画面へ">
-
-<table>
+<table border="1" style="border-collapse: collapse;">
+  <thead style="display: block;">
     <tr>
-      <th>id</th>
-      <th>社員コード</th>
-      <th>名前</th>
-      <th>苗字</th>
-      <th>last_name_romaji</th>
-      <th>first_name_romaji</th>
-      <th>所属</th>
-      <th>経歴</th>
-      <th>入社年月日</th>
+      <th style="width:50px;">No</th>
+      <th style="width:150px;">姓名</th>
+      <th style="width:100px;">入社年月日</th>
+      <th style="width:75px;">経歴</th>
+      <th style="width:150px;">案件概要</th>
     </tr>
+  </thead>
+   
+  <tbody style="display: block;height:200px;">
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td style="width:50px;"></td>
+      <td style="width:150px;"></td>
+      <th style="width:100px;"></th>
+      <th style="width:75px;"></th>
+      <th style="width:150px;"></th>
     </tr>
+    
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td style="width:50px;"></td>
+      <td style="width:150px;"></td>
+      <th style="width:100px;"></th>
+      <th style="width:75px;"></th>
+      <th style="width:150px;"></th>
     </tr>
-  </table>
+    
+    <tr>
+      <td style="width:50px;"></td>
+      <td style="width:150px;"></td>
+      <th style="width:100px;"></th>
+      <th style="width:75px;"></th>
+      <th style="width:150px;"></th>
+    </tr>
+    
+    <tr>
+      <td style="width:50px;"></td>
+      <td style="width:150px;"></td>
+      <th style="width:100px;"></th>
+      <th style="width:75px;"></th>
+      <th style="width:150px;"></th>
+    </tr>
+    
+  </tbody>
+</table>
 
+	</div>
+			
+		<div class="engineer">
+			<div class="subtitle">営業</div>
+		</div>
+
+<table border="1" style="border-collapse: collapse;">
+  <thead style="display: block;">
+    <tr>
+      <th style="width:50px;">No</th>
+      <th style="width:150px;">姓名</th>
+      <th style="width:100px;">入社年月日</th>
+      <th style="width:75px;">経歴</th>
+      <th style="width:150px;">案件概要</th>
+    </tr>
+  </thead>
+   
+  <tbody style="display: block;height:200px;">
+    <tr>
+      <td style="width:50px;"></td>
+      <td style="width:150px;"></td>
+      <th style="width:100px;"></th>
+      <th style="width:75px;"></th>
+      <th style="width:150px;"></th>
+    </tr>
+    
+    <tr>
+      <td style="width:50px;"></td>
+      <td style="width:150px;"></td>
+      <th style="width:100px;"></th>
+      <th style="width:75px;"></th>
+      <th style="width:150px;"></th>
+    </tr>
+    
+    <tr>
+      <td style="width:50px;"></td>
+      <td style="width:150px;"></td>
+      <th style="width:100px;"></th>
+      <th style="width:75px;"></th>
+      <th style="width:150px;"></th>
+    </tr>
+    
+    <tr>
+      <td style="width:50px;"></td>
+      <td style="width:150px;"></td>
+      <th style="width:100px;"></th>
+      <th style="width:75px;"></th>
+      <th style="width:150px;"></th>
+    </tr>
+    
+  </tbody>
+</table>
 
 </body>
 </html>
