htmlファイルのレイアウトの変更 それぞれのファイルでレイアウトの調整をした。 cssファイルも作り、共通しているところは、cssでまとめて調整をした。

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,43 +1,55 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="stylesheet.css">
+	<title>管理画面</title>
 </head>
 <body>
-<h1>新規情報管理</h1>
+<div id="listPage">
+		<div class="toptitle">新規情報管理</div>
+			
+		<div class="engineer">
+			<form action="new">
+			<input type="submit" value="新規登録" class="staffbtnnew">
+			</form>
+			<form action="home">
+			<input type="submit" value="戻る" class="staffbtn">
+			</form>
+			<div class="subtitle">エンジニア</div>
+		</div>
+</div>>
 
-<input type="button" onclick="location.href='new'" value="新規登録">
-
-<input type="button" onclick="location.href='home'" value="戻る">
-<table> 
-    <thead>
-        <tr>
-          <th>id</th>
-          <th>社員コード</th>
-          <th>名前</th>
-          <th>苗字</th>
-          <th>last_name_romaji</th>
-          <th>first_name_romaji</th>
-          <th>所属</th>
-          <th>経歴</th>
-          <th>入社年月日</th>
-         
-          <th></th>
-        </tr>
-      </thead>
+<table border="1" style="border-collapse: collapse;">
+	   <thead style="display: block;">
+	    <tr>
+	      <th style="width:50px;">No</th>
+	      <th style="width:150px;">社員コード</th>
+	      <th style="width:150px;">姓名</th>
+	      <th style="width:200px;">姓名ローマ字</th>
+	      <th style="width:100px;">入社年月日</th>
+	      <th style="width:75px;">編集</th>
+	      <th style="width:75px;">削除</th>
+	    </tr>
+	  </thead>
       
-      <tbody>
-        <tr th:each="user : ${userlist}" th:object="${user}" class="align-middle">
-          <td th:text="*{id}"></td>
-          <td th:text="*{staff_code}"></td>
-          <td th:text="*{last_name}"></td>
-          <td th:text="*{first_name}"></td>
-          <td th:text="*{last_name_romaji}"></td>
-          <td th:text="*{first_name_romaji}"></td>
-          <td th:text="*{staff_department}"></td>
-          <td th:text="*{project_type}"></td>
-          <td th:text="*{joined_year}"></td>          
+      <tbody style="display: block;height:200px;">
+        <tr th:each="user : ${userList}" th:object="${user}" class="align-middle">
+          <td style="width:50px;"th:text="*{id}"></td>
+          <td style="width:150px;"th:text="*{staff_code}"></td>
+          <td style="width:150px;"th:text="*{last_name} + *{first_name}"></td>
+          <td style="width:200px;"th:text="*{last_name_romaji} + *{first_name_romaji}"></td>
+          <td style="width:100px;"th:text="*{joined_year}"></td>
+          <td style="width:75px;">
+          	<form action="/">
+				<input type="submit" value="更新">
+			</form>
+		  </td>
+          <td style="width:75px;">
+          	<form action="/">
+				<input type="submit" value="削除">
+			</form>
+          </td>          
         </tr>
       </tbody>
 
