新規登録に関する変更 ControllerにてRequestMethodにGET,POSTを追加

--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -63,9 +63,13 @@
 				<textarea name="" id="" cols="30" rows="5" class="formbox"></textarea>
 			</div>
 		</div>
-		</form>
+		
+	 	<form action="new/registration">
+	 	<input type="submit" value="登録">
+	 	</form>
+	</form>
 
-<form action="new/registration"><input type="submit" value="登録"></form>
+
 <input type="button" onclick="location.href='list'" value="戻る">
 
 </body>
