staff_departmentで分けるための作業の途中

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -29,13 +29,12 @@
   </thead>
    
   <tbody style="display: block;height:200px;">
-    <tr>
-      <td style="width:50px;"></td>
-      <td style="width:150px;"></td>
+   <tr>
+      <th style="width:150px;"></th>
       <th style="width:100px;"></th>
       <th style="width:75px;"></th>
       <th style="width:150px;"></th>
-    </tr>
+   </tr>
     
     <tr>
       <td style="width:50px;"></td>
