--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -18,24 +18,24 @@
 			</form>
 			<div class="subtitle">エンジニア</div>
 		</div>
-</div>>
+</div>
 
 <table border="1" style="border-collapse: collapse;">
 	   <thead style="display: block;">
 	    <tr>
-	      <th style="width:50px;">No</th>
-	      <th style="width:150px;">社員コード</th>
-	      <th style="width:150px;">姓名</th>
-	      <th style="width:200px;">姓名ローマ字</th>
-	      <th style="width:100px;">入社年月日</th>
-	      <th style="width:75px;">編集</th>
-	      <th style="width:75px;">削除</th>
+	      <th style="width:42px;">No</th>
+	      <th style="width:122px;">社員コード</th>
+	      <th style="width:113px;">姓名</th>
+	      <th style="width:190px;">姓名ローマ字</th>
+	      <th style="width:115px;">入社年月日</th>
+	      <th style="width:68px;">編集</th>
+	      <th style="width:69px;">削除</th>
 	    </tr>
 	  </thead>
       
-      <tbody style="display: block;height:200px;">
-        <tr th:each="user : ${userList}" th:object="${user}" class="align-middle">
-          <td style="width:50px;"th:text="*{id}"></td>
+      <tbody style="display: block;">
+          <tr th:each="user ,stat : ${userList}" th:object="${user}" class="align-middle">
+          <td style="width:50px;"th:text="${stat.count}"></td>
           <td style="width:150px;"th:text="*{staff_code}"></td>
           <td style="width:150px;"th:text="*{last_name} + *{first_name}"></td>
           <td style="width:200px;"th:text="*{last_name_romaji} + *{first_name_romaji}"></td>
@@ -44,7 +44,6 @@
           	<form action="/">
 				<input type="submit" value="更新">
 			</form>
-		  </td>
           <td style="width:75px;">
           	<form action="/">
 				<input type="submit" value="削除">
@@ -54,5 +53,6 @@
       </tbody>
 
 </table>
+	
 </body>
 </html>
