--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -18,22 +18,22 @@
 			</div>
 			
 			<div>
-				苗字(<span>※</span>):
+				姓(<span>※</span>):
 				<input type="text" name="last_name">
 			</div>
 			
 			<div>
-				名前(<span>※</span>):
+				名(<span>※</span>):
 				<input type="text" name="first_name">
 			<div>
 			
 			</div>
-				last_name_romaji(<span>※</span>):
+				姓 ローマ字(<span>※</span>):
 				<input type="text" name="last_name_romaji">
 			</div>
 			
 			<div>
-				first_name_romaji(<span>※</span>):
+				名 ローマ字(<span>※</span>):
 				<input type="text" name="first_name_romaji">
 			</div>
 			
