--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-	margin: 50px 160px;
+	margin: 40px 150px;
 }
 
 .staffbtn {
@@ -26,15 +26,22 @@ body {
 	margin-top: 30px;
 }
 
+.align-middle{
+	box-sizing: border-box;
+}
 table th{
-  padding : 20px;
+  padding : 30px;
 }
 
 table td{
-  padding : 20px;
+  padding : 30px;
 }
 p {
 	white-space: pre-wrap
+}
+.textp {
+	width: 150px;
+	white-space: pre;
 }
 
 .form-container {
