--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="stylesheet.css">
+	<link th:href="@{/stylesheet.css}" rel="styleSheet">
 	<title>Blue star</title>
 </head>
 
