--- a/src/main/resources/templates/destroy.html
+++ b/src/main/resources/templates/destroy.html
@@ -8,8 +8,7 @@
 <body>
 <div th:text="*{id}">1</div><br/>
 <div th:text="*{name}"></div><br/>
-<h2>新規登録成功</h2>
-
+<h2>削除成功</h2>
 
 <form method="get" action="/home">
 
