--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -7,43 +7,43 @@
 </head>
 
 <body>
-	<div class="toptitle">社員情報更新</div>
+	<div class="toptitle">社員情報削除</div>
 	
 	<div class="subtitle">社員情報</div>
-		<form  method="post" action = "/update" th:object="${user}">
+		<form  method="post" action = "/destroy" th:object="${user}">
 			<div class="form-container">
 				
 				<div>
 					社員コード(<span>※</span>):
-					<input type="text" name="staff_code" th:field="*{staff_code}">
+					<input type="text" name="staff_code" th:field="*{staff_code}" readonly>
 					<input type="hidden" name="staff_code_before" th:value = "${staff_code}">
 				</div>
 				
 				<div>
 					姓(<span>※</span>):
-					<input type="text" name="last_name" th:field="*{last_name}">
+					<input type="text" name="last_name" th:field="*{last_name}" readonly>
 				</div>
 				
 				<div>
 					名(<span>※</span>):
-					<input type="text" name="first_name" th:field="*{first_name}">
+					<input type="text" name="first_name" th:field="*{first_name}" readonly>
 				<div>
 				
 				</div>
 					姓 ローマ字(<span>※</span>):
-					<input type="text" name="last_name_romaji" th:field="*{last_name_romaji}">
+					<input type="text" name="last_name_romaji" th:field="*{last_name_romaji}" readonly>
 				</div>
 				
 				<div>
 					名 ローマ字(<span>※</span>):
-					<input type="text" name="first_name_romaji" th:field="*{first_name_romaji}">
+					<input type="text" name="first_name_romaji" th:field="*{first_name_romaji}" readonly>
 				</div>
 				
 				<div>
 					所属(<span>※</span>):
-					<select name="staff_department" size="1" th:field="*{staff_department}" class = box>
+					<select name="staff_department" size="1" th:field="*{staff_department}" class ="disabled" tabindex="-1">
 						<option value="">3つの選択肢を表示</option>
-						<option value="0001">エンジニア</option>
+						<option value="0001" >エンジニア</option>
 						<option value="0002">営業</option>
 						<option value="0003">コーポレート</option>
 					</select>
@@ -51,28 +51,26 @@
 				
 				<div>
 					経歴(<span>※</span>):
-					<input type="radio" name="new_glad_flg" value="true" checked class = radio>新卒
-					<input type="radio" name="new_glad_flg" value="false" class = radio>中途
+					<input type="radio" name="new_glad_flg" value="true" th:field="*{new_glad_flg}" class ="disabled1" tabindex="-1" >新卒
+					<input type="radio" name="new_glad_flg" value="false" th:field="*{new_glad_flg}" class ="disabled1" tabindex="-1">中途
 				</div>
 				
 				<div>
 					入社年月日(<span>※</span>):
-					<input type="text" name="joined_year" th:field="*{joined_year}">
+					<input type="text" name="joined_year" th:field="*{joined_year}" readonly>
 				</div>
 				
 				<div>
 					案件概要/業務内容:
-					<textarea name="project_type" cols="30" rows="5" class="formbox" WRAP="hard" th:field="*{project_type}"></textarea>
+					<textarea name="project_type" cols="30" rows="5" class="formbox" WRAP="hard" th:field="*{project_type}" readonly></textarea>
 				</div>
 			</div>
 			
 		 	
-		 	<input type="submit" value="更新" class="registbtn">
+		 	<input type="submit" value="削除" class="registbtn">
 		 	
 		</form>
 	<input type="button" onclick="location.href='/list'" value="戻る" class = backbtn>
 	
-	
-
 </body>
 </html>
