更新画面にて、経歴がすべて新卒になっていることへの変更

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -51,8 +51,8 @@
 				
 				<div>
 					経歴(<span>※</span>):
-					<input type="radio" name="new_glad_flg" value="true" checked class = radio>新卒
-					<input type="radio" name="new_glad_flg" value="false" class = radio>中途
+					<input type="radio" name="new_glad_flg" value="true" checked class = radio th:field="*{new_glad_flg}">新卒
+					<input type="radio" name="new_glad_flg" value="false" class = radio th:field="*{new_glad_flg}">中途
 				</div>
 				
 				<div>
