全てのファイルで自動フォーマットを行った

--- a/src/main/resources/templates/destroy.html
+++ b/src/main/resources/templates/destroy.html
@@ -6,14 +6,16 @@
 <title>結果画面</title>
 </head>
 <body>
-<div th:text="*{id}">1</div><br/>
-<div th:text="*{name}"></div><br/>
-<h2>削除成功</h2>
+	<div th:text="*{id}">1</div>
+	<br />
+	<div th:text="*{name}"></div>
+	<br />
+	<h2>削除成功</h2>
 
-<form method="get" action="/home">
+	<form method="get" action="/home">
 
-<input type="submit" value="戻る"/>
-</form>
+		<input type="submit" value="戻る" />
+	</form>
 
 </body>
 </html>
