--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -1,78 +1,79 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
 <head>
-	<meta charset="UTF-8">
-	<title>Insert title here</title>
-	<link th:href="@{/stylesheet.css}" rel="styleSheet">
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<link th:href="@{/stylesheet.css}" rel="styleSheet">
 </head>
 
 <body>
 	<div class="toptitle">社員情報更新</div>
-	
+
 	<div class="subtitle">社員情報</div>
-		<form  method="post" action = "/update" th:object="${user}">
-			<div class="form-container">
-				
-				<div>
-					社員コード(<span>※</span>):
-					<input type="text" name="staff_code" th:field="*{staff_code}">
-					<input type="hidden" name="staff_code_before" th:value = "${staff_code}">
-				</div>
-				
-				<div>
-					姓(<span>※</span>):
-					<input type="text" name="last_name" th:field="*{last_name}">
-				</div>
-				
-				<div>
-					名(<span>※</span>):
-					<input type="text" name="first_name" th:field="*{first_name}">
-				<div>
-				
-				</div>
-					姓 ローマ字(<span>※</span>):
-					<input type="text" name="last_name_romaji" th:field="*{last_name_romaji}">
-				</div>
-				
-				<div>
-					名 ローマ字(<span>※</span>):
-					<input type="text" name="first_name_romaji" th:field="*{first_name_romaji}">
-				</div>
-				
-				<div>
-					所属(<span>※</span>):
-					<select name="staff_department" size="1" th:field="*{staff_department}" class = box>
-						<option value="">3つの選択肢を表示</option>
-						<option value="0001">エンジニア</option>
-						<option value="0002">営業</option>
-						<option value="0003">コーポレート</option>
-					</select>
-				</div>
-				
-				<div>
-					経歴(<span>※</span>):
-					<input type="radio" name="new_glad_flg" value="true" checked class = radio th:field="*{new_glad_flg}">新卒
-					<input type="radio" name="new_glad_flg" value="false" class = radio th:field="*{new_glad_flg}">中途
-				</div>
-				
-				<div>
-					入社年月日(<span>※</span>):
-					<input type="text" name="joined_year" th:field="*{joined_year}">
-				</div>
-				
-				<div>
-					案件概要/業務内容:
-					<textarea name="project_type" cols="30" rows="5" class="formbox" WRAP="hard" th:field="*{project_type}"></textarea>
-				</div>
+	<form method="post" action="/update" th:object="${user}">
+		<div class="form-container">
+
+			<div>
+				社員コード(<span>※</span>): <input type="text" name="staff_code"
+					th:field="*{staff_code}"> <input type="hidden"
+					name="staff_code_before" th:value="${staff_code}">
 			</div>
-			
-		 	
-		 	<input type="submit" value="更新" class="registbtn">
-		 	
-		</form>
-	<input type="button" onclick="location.href='/list'" value="戻る" class = backbtn>
-	
-	
+
+			<div>
+				姓(<span>※</span>): <input type="text" name="last_name"
+					th:field="*{last_name}">
+			</div>
+
+			<div>
+				名(<span>※</span>): <input type="text" name="first_name"
+					th:field="*{first_name}">
+				<div></div>
+				姓 ローマ字(<span>※</span>): <input type="text" name="last_name_romaji"
+					th:field="*{last_name_romaji}">
+			</div>
+
+			<div>
+				名 ローマ字(<span>※</span>): <input type="text" name="first_name_romaji"
+					th:field="*{first_name_romaji}">
+			</div>
+
+			<div>
+				所属(<span>※</span>): <select name="staff_department" size="1"
+					th:field="*{staff_department}" class=box>
+					<option value="">3つの選択肢を表示</option>
+					<option value="0001">エンジニア</option>
+					<option value="0002">営業</option>
+					<option value="0003">コーポレート</option>
+				</select>
+			</div>
+
+			<div>
+				経歴(<span>※</span>): <input type="radio" name="new_glad_flg"
+					value="true" checked class=radio th:field="*{new_glad_flg}">新卒
+				<input type="radio" name="new_glad_flg" value="false" class=radio
+					th:field="*{new_glad_flg}">中途
+			</div>
+
+			<div>
+				入社年月日(<span>※</span>): <input type="text" name="joined_year"
+					th:field="*{joined_year}">
+			</div>
+
+			<div>
+				案件概要/業務内容:
+				<textarea name="project_type" cols="30" rows="5" class="formbox"
+					WRAP="hard" th:field="*{project_type}"></textarea>
+			</div>
+		</div>
+
+
+		<input type="submit" value="更新" class="registbtn">
+
+	</form>
+	<input type="button" onclick="location.href='/list'" value="戻る"
+		class=backbtn>
+
+
 
 </body>
 </html>
