--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,59 +1,61 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
 <head>
-	<meta charset="UTF-8">
-	<link th:href="@{/stylesheet.css}" rel="styleSheet">
-	<title>管理画面</title>
+<meta charset="UTF-8">
+<link th:href="@{/stylesheet.css}" rel="styleSheet">
+<title>管理画面</title>
 </head>
 <body>
-<div id="listPage">
+	<div id="listPage">
 		<div class="toptitle">新規情報管理</div>
-			
+
 		<div class="engineer">
 			<form action="new">
-			<input type="submit" value="新規登録" class="staffbtnnew">
+				<input type="submit" value="新規登録" class="staffbtnnew">
 			</form>
 			<form action="home">
-			<input type="submit" value="戻る" class="staffbtn">
+				<input type="submit" value="戻る" class="staffbtn">
 			</form>
 			<div class="subtitle">エンジニア</div>
 		</div>
-</div>
+	</div>
 
-<table border="1" style="border-collapse: collapse;">
-	   <thead style="display: inline-block;">
-	    <tr>
-	      <th style="width:27.46px;">No</th>
-	      <th style="width:82px;">社員コード</th>
-	      <th style="width:75px;">姓 名</th>
-	      <th style="width:140px;">姓名 ローマ字</th>
-	      <th style="width:110px;">入社年月日</th>
-	      <th style="width:50px;">編集</th>
-	      <th style="width:50px;">削除</th>
-	    </tr>
-	  </thead>
-      
-      <tbody style="display: inline-block;">
-          <tr th:each="user ,stat : ${userList}" th:object="${user}" class="align-middle">
-          <td style="width:27.46px;"th:text="${stat.count}"></td>
-          <td style="width:82.2px;"th:text="*{staff_code}"></td>
-          <td style="width:75px;"th:text="*{last_name} + ' '+ *{first_name}"></td>
-          <td style="width:140.2px;"th:text="*{last_name_romaji} + ' '+ *{first_name_romaji}"></td>
-          <td style="width:110px;"th:text="*{joined_year}"></td>
-          <td style="width:50.1px;">
-          	<form th:action="@{'/edit/' + ${user.staff_code}}" method="get">
-				<input type="submit" value="更新">
-			</form>
-		  </td>
-          <td style="width:50px;">
-          	<form th:action="@{'/delete/' + ${user.staff_code}}" method = "get">
-				<input type="submit" value="削除">
-			</form>
-          </td>          
-        </tr>
-      </tbody>
+	<table border="1" style="border-collapse: collapse;">
+		<thead style="display: inline-block;">
+			<tr>
+				<th style="width: 27.46px;">No</th>
+				<th style="width: 82px;">社員コード</th>
+				<th style="width: 75px;">姓 名</th>
+				<th style="width: 140px;">姓名 ローマ字</th>
+				<th style="width: 110px;">入社年月日</th>
+				<th style="width: 50px;">編集</th>
+				<th style="width: 50px;">削除</th>
+			</tr>
+		</thead>
 
-</table>
-	
+		<tbody style="display: inline-block;">
+			<tr th:each="user ,stat : ${userList}" th:object="${user}"
+				class="align-middle">
+				<td style="width: 27.46px;" th:text="${stat.count}"></td>
+				<td style="width: 82.2px;" th:text="*{staff_code}"></td>
+				<td style="width: 75px;" th:text="*{last_name} + ' '+ *{first_name}"></td>
+				<td style="width: 140.2px;"
+					th:text="*{last_name_romaji} + ' '+ *{first_name_romaji}"></td>
+				<td style="width: 110px;" th:text="*{joined_year}"></td>
+				<td style="width: 50.1px;">
+					<form th:action="@{'/edit/' + ${user.staff_code}}" method="get">
+						<input type="submit" value="更新">
+					</form>
+				</td>
+				<td style="width: 50px;">
+					<form th:action="@{'/delete/' + ${user.staff_code}}" method="get">
+						<input type="submit" value="削除">
+					</form>
+				</td>
+			</tr>
+		</tbody>
+
+	</table>
+
 </body>
 </html>
