--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -1,76 +1,70 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="UTF-8">
-	<title>Insert title here</title>
-	<link th:href="@{/stylesheet.css}" rel="styleSheet">
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<link th:href="@{/stylesheet.css}" rel="styleSheet">
 </head>
 
 <body>
-<div class="toptitle">社員情報新規登録</div>
+	<div class="toptitle">社員情報新規登録</div>
 
-<div class="subtitle">社員情報</div>
-	<form  method="post" action = "/new/registration">
+	<div class="subtitle">社員情報</div>
+	<form method="post" action="/new/registration">
 		<div class="form-container">
-			
+
 			<div>
-				社員コード(<span>※</span>):
-				<input type="text" name="staff_code">
+				社員コード(<span>※</span>): <input type="text" name="staff_code">
 			</div>
-			
+
 			<div>
-				姓(<span>※</span>):
-				<input type="text" name="last_name">
+				姓(<span>※</span>): <input type="text" name="last_name">
 			</div>
-			
+
 			<div>
-				名(<span>※</span>):
-				<input type="text" name="first_name">
-			<div>
-			
+				名(<span>※</span>): <input type="text" name="first_name">
+				<div></div>
+				姓 ローマ字(<span>※</span>): <input type="text" name="last_name_romaji">
 			</div>
-				姓 ローマ字(<span>※</span>):
-				<input type="text" name="last_name_romaji">
-			</div>
-			
+
 			<div>
-				名 ローマ字(<span>※</span>):
-				<input type="text" name="first_name_romaji">
+				名 ローマ字(<span>※</span>): <input type="text" name="first_name_romaji">
 			</div>
-			
+
 			<div>
-				所属    (<span>※</span>):                    
-				<select name="staff_department" size="1" class = box>
+				所属 (<span>※</span>): <select name="staff_department" size="1"
+					class=box>
 					<option value="">3つの選択肢を表示</option>
 					<option value="0001">エンジニア</option>
 					<option value="0002">営業</option>
 					<option value="0003">コーポレート</option>
 				</select>
 			</div>
-			
+
 			<div>
-				経歴  (<span>※</span>):
-				<input type="radio" name="new_glad_flg" value="true" checked class = radio>新卒
-				<input type="radio" name="new_glad_flg" value="false"class = radio>中途
+				経歴 (<span>※</span>): <input type="radio" name="new_glad_flg"
+					value="true" checked class=radio>新卒 <input type="radio"
+					name="new_glad_flg" value="false" class=radio>中途
 			</div>
-			
+
 			<div>
-				入社年月日(<span>※</span>):
-				<input type="text" name="joined_year">
+				入社年月日(<span>※</span>): <input type="text" name="joined_year">
 			</div>
-			
+
 			<div>
 				<label>案件概要/業務内容:</label>
-				<textarea name="project_type" cols="30" rows="5" class="formbox" WRAP="hard"></textarea>
+				<textarea name="project_type" cols="30" rows="5" class="formbox"
+					WRAP="hard"></textarea>
 			</div>
 		</div>
-		
-	
-	 	<input type="submit" value="登録" class="registbtn">
+
+
+		<input type="submit" value="登録" class="registbtn">
 	</form>
 
 
-<input type="button" onclick="location.href='/list'" value="戻る" class = backbtn>
+	<input type="button" onclick="location.href='/list'" value="戻る"
+		class=backbtn>
 
 </body>
 </html>
